Fix text in navigation overflowing (#3121)
* fix text in navigation overflowing due to long words

* no auto-hyphenation

--- a/src/features/navigation/components/Page.module.css
+++ b/src/features/navigation/components/Page.module.css
@@ -36,8 +36,9 @@
   text-align: left;
 
   border-radius: var(--fds-border_radius-interactive);
+  overflow-wrap: anywhere;
   padding: 2px 6px;
-  margin: -2px;
+  margin: -2px -6px -2px -2px;
 }
 
 .page-button:disabled {
