--- a/src/features/navigation/components/SubformsForPage.module.css
+++ b/src/features/navigation/components/SubformsForPage.module.css
@@ -18,8 +18,9 @@
   text-align: left;
 
   border-radius: var(--fds-border_radius-interactive);
+  overflow-wrap: anywhere;
   padding: 2px 6px;
-  margin: -2px;
+  margin: -2px -6px -2px -2px;
 }
 
 .subform-expand-button:hover {
@@ -65,8 +66,9 @@
   text-align: left;
 
   border-radius: var(--fds-border_radius-interactive);
+  overflow-wrap: anywhere;
   padding: 2px 6px;
-  margin: -2px;
+  margin: -2px -6px -2px -2px;
 }
 
 .subform-link:disabled {
